Implement items functionality
