# src/main/kotlin/com/mypieceofcode/rpgapi/domain/items/Item.kt
@@ -1,16 +1,18 @@
 package com.mypieceofcode.rpgapi.domain.items
 
 import com.mypieceofcode.rpgapi.domain.DomainObject
+import com.mypieceofcode.rpgapi.domain.enums.Availability
 import com.mypieceofcode.rpgapi.exceptions.ErrorCode
 import com.mypieceofcode.rpgapi.exceptions.InvalidEntityException
+import com.mypieceofcode.rpgapi.infrastructure.persistence.DbItem
 import org.apache.commons.lang3.StringUtils.isBlank
 
 data class Item(
         val name: String,
         val description: String,
-        val availability: String,
-        val price: Float = 0f,
-        var id: String? = null
+        val availability: Availability,
+        val price: Float,
+        val id: String? = null
 ) : DomainObject() {
 
     init {
@@ -18,11 +20,18 @@ data class Item(
     }
 
     override fun validate() {
-        validatePrice(price)
+        validatePrice(this.price)
+        validateAvailability(this.availability)
         when {
             isBlank(this.name) -> throw InvalidEntityException(ErrorCode.ITEM_EMPTY_NAME)
             isBlank(this.description) -> throw InvalidEntityException(ErrorCode.ITEM_EMPTY_DESCRIPTION)
-            isBlank(this.availability) -> throw InvalidEntityException(ErrorCode.ITEM_EMPTY_AVAILABILITY)
+            isBlank(this.availability.toString()) -> throw InvalidEntityException(ErrorCode.ITEM_EMPTY_AVAILABILITY)
+        }
+    }
+
+    private fun validateAvailability(availability: Availability) {
+        if(availability == Availability.INVALID){
+            throw InvalidEntityException(ErrorCode.ITEM_INVALID_AVAILABILITY)
         }
     }
 
@@ -31,4 +40,9 @@ data class Item(
             throw InvalidEntityException(ErrorCode.ITEM_INVALID_PRICE)
         }
     }
+
+    companion object {
+
+    }
+
 }
